[package]
name = "gamemonitor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json" ] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "0.2.0-alpha.6" }
clap_derive = { version = "4.0.0-rc.1" }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
tokio-util = "0.7.12"
frankenstein = "0.33.0"
